--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -16,8 +16,32 @@
     <link href="/icofont/icofont.min.css" rel="stylesheet">
     <link href="/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="css/stylesheet.css" rel="stylesheet">
+    <script th:src="@{/js/sockjs.min.js}"></script>
+    <script th:src="@{/js/stomp.js}"></script>
+    <script th:src="@{/js/jquery-3.1.1.js}"></script>
+    <!-- jQuery -->
+    <script src="../../static/AdminLTE-3.0.5/plugins/jquery/jquery.min.js"
+            th:src="@{/AdminLTE-3.0.5/plugins/jquery/jquery.min.js}"></script>
+    <!-- Bootstrap 4 -->
+    <script src="../../static/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js"
+            th:src="@{/AdminLTE-3.0.5/plugins/bootstrap/js/bootstrap.bundle.min.js}" ></script>
+    <!-- bs-custom-file-input -->
+    <script src="../../static/AdminLTE-3.0.5/plugins/bs-custom-file-input/bs-custom-file-input.min.js"
+            th:src="@{/AdminLTE-3.0.5/plugins/bs-custom-file-input/bs-custom-file-input.min.js}"></script>
+    <!-- SweetAlert2 -->
+    <script src="../../static/AdminLTE-3.0.5/plugins/sweetalert2/sweetalert2.min.js"
+            th:src="@{/AdminLTE-3.0.5/plugins/sweetalert2/sweetalert2.min.js}"></script>
+    <!-- Toastr -->
+    <script src="../../static/AdminLTE-3.0.5/plugins/toastr/toastr.min.js"
+            th:src="@{/AdminLTE-3.0.5/plugins/toastr/toastr.min.js}"></script>
+    <!-- AdminLTE App -->
+    <script src="../../static/AdminLTE-3.0.5/dist/js/adminlte.min.js"
+            th:src="@{/AdminLTE-3.0.5/dist/js/adminlte.min.js}"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="../../static/AdminLTE-3.0.5/dist/js/demo.js"
+            th:src="@{/AdminLTE-3.0.5/dist/js/demo.js}"></script>
 </head>
-<body class="hold-transition sidebar-mini-md">
+<body class="hold-transition sidebar-mini-md" onload="connect()">
 <div class="wrapper">
 
     <!-- Navbar -->
@@ -701,6 +725,27 @@
             $(this).addClass('active');
         });
     })
+
+    function connect() {
+        var socket = new SockJS('/endpointSang');
+        stompClient = Stomp.over(socket);
+        stompClient.connect({}, function (frame) {
+            // setConnected(true);
+            console.log('Connected:' + frame);
+            stompClient.subscribe('/topic/getResponse', function (response) {
+                showResponse(JSON.parse(response.body).responseMessage);
+            })
+        });
+    }
+    function showResponse(message) {
+        $(document).Toasts('create', {
+            class: 'bg-info',
+            title: 'Toast Title',
+            subtitle: 'Subtitle',
+            body: message
+        })
+    }
+
 </script>
 </body>
 </html>
