--- a/src/main/resources/templates/user/userInfomation.html
+++ b/src/main/resources/templates/user/userInfomation.html
@@ -343,7 +343,7 @@
                                 <!-- /.card-body -->
 
                                 <div class="card-footer">
-                                    <button type="submit" class="btn btn-primary" onclick="clickHandle">保存</button>
+                                    <button type="button" class="btn btn-primary" onclick="clickHandle()">保存</button>
                                 </div>
                             </form>
                         </div>
