在Readme增加使用功能说明，更新数据库

--- a/src/main/resources/templates/login/loginPage.html
+++ b/src/main/resources/templates/login/loginPage.html
@@ -672,8 +672,14 @@
                 </div>
                 <!-- /.card-body -->
                 <div class="card-footer">
-                  <button type="submit" class="btn btn-info">Sign in</button>
-                  <button type="submit" class="btn btn-default float-right">Cancel</button>
+
+                    <button type="submit" class="btn btn-info">Sign in</button>
+                    <button type="submit" class="btn btn-default float-right">Cancel</button>
+                    <div class="row">
+                      <a href="/signUpPage" class="offset-11" style="font-family: 微软雅黑;text-align: right;
+                      font-size: small">
+                        还未注册</a>
+                    </div>
                 </div>
                 <!-- /.card-footer -->
               </form>
