添加了订单的查看

--- a/src/main/resources/templates/user/AddressManage.html
+++ b/src/main/resources/templates/user/AddressManage.html
@@ -183,7 +183,7 @@
                     <!-- Add icons to the links using the .nav-icon class
                          with font-awesome or any other icon font library -->
                     <li class="nav-item has-treeview">
-                        <a href="./userInfomation.html" class="nav-link">
+                        <a href="/user/MyInformation" class="nav-link">
                             <i class="nav-icon fas fa-tachometer-alt"></i>
                             <p>
                                 个人中心
@@ -191,7 +191,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a href="./AddressManage.html" class="nav-link">
+                        <a href="/user/AdressManage" class="nav-link">
                             <i class="nav-icon fas fa-th"></i>
                             <p>
                                 地址管理
@@ -199,7 +199,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./ChangePassword.html" class="nav-link">
+                        <a href="/user/changepassword" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 修改密码
@@ -207,7 +207,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="./BalanceRecharge.html" class="nav-link">
+                        <a href="/balance/balancepage" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 余额充值
@@ -223,7 +223,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="../goods.html" class="nav-link">
+                        <a href="/" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 商品页面
@@ -231,7 +231,7 @@
                         </a>
                     </li>
                     <li class="nav-item has-treeview">
-                        <a href="" class="nav-link">
+                        <a href="/user/OrderHistory" class="nav-link">
                             <i class="nav-icon fas fa-copy"></i>
                             <p>
                                 订单记录
